--- a/app/src/main/res/layout/fragment_beranda.xml
+++ b/app/src/main/res/layout/fragment_beranda.xml
@@ -139,196 +139,140 @@
     </RelativeLayout>
 
         <LinearLayout
+            android:layout_marginTop="220dp"
             android:layout_width="match_parent"
-            android:layout_below="@+id/rela1"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:paddingTop="15dp"
-            android:id="@+id/line1"
-            android:weightSum="3">
+            android:layout_height="wrap_content">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginHorizontal="10dp"
-                android:layout_weight="1">
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content">
 
-                <ImageButton
-                    android:id="@+id/btnLaporan"
+                <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="0dp"
-                    android:background="@drawable/button_background"
-                    android:src="@drawable/mega_72"
-                    android:textAlignment="center" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Laporan"
-                    android:layout_gravity="center"
-                    android:textSize="16sp"
-                    android:textColor="#000"
-                    android:textStyle="bold"/>
+                    android:layout_height="wrap_content">
+                    <RelativeLayout
+                        android:padding="20dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <ImageView
+                            android:id="@+id/ico_mn1"
+                            android:background="@drawable/mn_acok"
+                            android:layout_marginRight="20dp"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp" />
+                        <TextView
+                            android:layout_toRightOf="@+id/ico_mn1"
+                            android:layout_centerVertical="true"
+                            android:layout_width="wrap_content"
+                            android:textColor="#000"
+                            android:layout_height="wrap_content"
+                            android:text="AC"/>
+                    </RelativeLayout>
+                </android.support.v7.widget.CardView>
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginHorizontal="10dp"
-                android:layout_weight="1">
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content">
 
-                <ImageButton
-                    android:id="@+id/btnDiskusi"
+                <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="0dp"
-                    android:background="@drawable/button_background"
-                    android:src="@drawable/ic_gruop_72"
-                    android:textAlignment="center" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Diskusi"
-                    android:layout_gravity="center"
-                    android:textSize="16sp"
-                    android:textColor="#000"
-                    android:textStyle="bold"/>
+                    android:layout_height="wrap_content">
+                    <RelativeLayout
+                        android:padding="20dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <ImageView
+                            android:id="@+id/ico_mn2"
+                            android:background="@drawable/mn_cctv"
+                            android:layout_marginRight="20dp"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp" />
+                        <TextView
+                            android:layout_toRightOf="@+id/ico_mn2"
+                            android:layout_centerVertical="true"
+                            android:textColor="#000"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="CCTV"/>
+                    </RelativeLayout>
+                </android.support.v7.widget.CardView>
 
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginHorizontal="10dp"
-                android:layout_weight="1">
-
-                <ImageButton
-                    android:id="@+id/btnReputasi"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="0dp"
-                    android:background="@drawable/button_background"
-                    android:src="@drawable/thumb_72"
-                    android:textAlignment="center" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Reputasi"
-                    android:layout_gravity="center"
-                    android:textSize="16sp"
-                    android:textColor="#000"
-                    android:textStyle="bold"/>
-
-            </LinearLayout>
-
-
-
+            
         </LinearLayout>
 
         <LinearLayout
+            android:layout_marginTop="300dp"
             android:layout_width="match_parent"
-            android:layout_below="@+id/line1"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:paddingTop="15dp"
-            android:layout_marginBottom="20dp"
-            android:id="@+id/line2"
-            android:weightSum="3">
-
+            android:layout_height="wrap_content">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginHorizontal="10dp"
-                android:layout_weight="1">
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content">
 
-                <ImageButton
-                    android:id="@+id/btnSurvei"
+                <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="0dp"
-                    android:background="@drawable/button_background"
-                    android:src="@drawable/survei_72"
-                    android:textAlignment="center" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=" Survei"
-                    android:layout_gravity="center"
-                    android:textSize="16sp"
-                    android:textColor="#000"
-                    android:textStyle="bold"/>
+                    android:layout_height="wrap_content">
+                    <RelativeLayout
+                        android:padding="20dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <ImageView
+                            android:id="@+id/ico_mn3"
+                            android:background="@drawable/mn_electtrical"
+                            android:layout_marginRight="20dp"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp" />
+                        <TextView
+                            android:layout_toRightOf="@+id/ico_mn3"
+                            android:layout_centerVertical="true"
+                            android:layout_width="wrap_content"
+                            android:textColor="#000"
+                            android:layout_height="wrap_content"
+                            android:text="Electrikal"/>
+                    </RelativeLayout>
+                </android.support.v7.widget.CardView>
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginHorizontal="10dp"
-                android:layout_weight="1">
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content">
 
-                <ImageButton
-                    android:id="@+id/btnVoting"
+                <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="0dp"
-                    android:background="@drawable/button_background"
-                    android:src="@drawable/vote_72"
-                    android:textAlignment="center" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Voting"
-                    android:layout_gravity="center"
-                    android:textSize="16sp"
-                    android:textColor="#000"
-                    android:textStyle="bold"/>
+                    android:layout_height="wrap_content">
+                    <RelativeLayout
+                        android:padding="20dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <ImageView
+                            android:id="@+id/ico_mn4"
+                            android:background="@drawable/mn_elektronic"
+                            android:layout_marginRight="20dp"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp" />
+                        <TextView
+                            android:layout_toRightOf="@+id/ico_mn4"
+                            android:layout_centerVertical="true"
+                            android:textColor="#000"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Elektronik"/>
+                    </RelativeLayout>
+                </android.support.v7.widget.CardView>
 
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginHorizontal="10dp"
-                android:layout_weight="1">
-
-                <ImageButton
-                    android:id="@+id/btnLogout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="0dp"
-                    android:background="#fff"
-                    android:textAlignment="center" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Logout"
-                    android:layout_gravity="center"
-                    android:textSize="16sp"
-                    android:textColor="#fafafa"
-                    android:textStyle="bold"/>
-
-            </LinearLayout>
-
-
 
         </LinearLayout>
-
-
-
+        
+        
 
     </RelativeLayout>
 
