--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -97,7 +97,7 @@
                                     android:text="Pilih"
                                     android:textSize="16sp"
                                     android:textStyle="bold"
-                                    android:id="@+id/btnSimpanLaporan2"
+                                    android:id="@+id/btnPilih1"
                                     android:background="@color/colorPrimary"
                                     android:textColor="@color/white"
                                     android:layout_alignParentBottom="true" />
@@ -153,7 +153,7 @@
                                     android:text="Pilih"
                                     android:textSize="16sp"
                                     android:textStyle="bold"
-                                    android:id="@+id/btnSimpanLaporan"
+                                    android:id="@+id/btnPilih2"
                                     android:background="@color/colorPrimary"
                                     android:textColor="@color/white"
                                     android:layout_alignParentBottom="true" />
