--- a/app/src/main/res/layout/fragment_pesanan.xml
+++ b/app/src/main/res/layout/fragment_pesanan.xml
@@ -34,7 +34,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Notifikasi"
+                android:text="Pesanan"
                 android:layout_marginTop="20dp"
                 android:textStyle="normal"
                 android:layout_gravity="center_horizontal"
