--- a/app/src/main/res/layout/fragment_pesanan.xml
+++ b/app/src/main/res/layout/fragment_pesanan.xml
@@ -1,77 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout android:id="@+id/fragment_container"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white_greyish"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
 
-    <RelativeLayout
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/navigation"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="0dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="0dp"
+        android:background="?android:attr/windowBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/navigation_laporan" />
 
-    <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:fitsSystemWindows="true">
-
-    <RelativeLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_aktif"
+        android:layout_below="@+id/navigation"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        android:clipToPadding="false"
+        android:scrollbars="vertical" />
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:id="@+id/lineDataPengguna"
-            android:layout_below="@+id/rela1"
-            android:layout_marginTop="5dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Pesanan"
-                android:layout_marginTop="20dp"
-                android:textStyle="normal"
-                android:layout_gravity="center_horizontal"
-                android:textSize="25sp"
-                android:textColor="#000"
-                />
-
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler_view"
-                android:layout_below="@+id/navigation"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:clipToPadding="false"
-                android:scrollbars="vertical" />
-
-        </LinearLayout>
-
-    </RelativeLayout>
-
-    </ScrollView>
-
-        <!--<android.support.design.widget.FloatingActionButton
-            android:id="@+id/btnCreate"
-            android:backgroundTint="@color/pinky"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="30dp"
-            android:layout_marginBottom="30dp"
-            android:src="@drawable/delete"
-            app:borderWidth="0dp"
-            app:elevation="6dp"
-            app:pressedTranslationZ="12dp" />-->
-
-    </RelativeLayout>
-
-</FrameLayout>
+</RelativeLayout>
