Perbaikan form register

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,108 +4,181 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity_register">
+    android:background="@color/viewBg">
 
-    <TextView
-        android:id="@+id/register"
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="40sp"
+        android:orientation="vertical"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp"
-        android:text="Register" />
+        android:paddingHorizontal="15dp">
 
-    <TextView
-        android:id="@+id/nama"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:layout_marginLeft="10dp"
-        android:text="Nama" />
+        <TextView
+            android:id="@+id/register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="40sp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"
+            android:textColor="@color/colorPrimary"
+            android:text="Register" />
 
-    <EditText
-        android:id="@+id/nmTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="130dp"
-        android:layout_marginLeft="10dp"
-        android:width="390dp"
-        android:ems="10"
-        android:inputType="textPersonName" />
+        <!--<ImageView
+            android:layout_gravity="center"
+            android:id="@+id/user_profile_photo"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/user_profile_image_background"
+            android:elevation="4dp"
+            android:src="@drawable/m_user"/>-->
 
-    <TextView
-        android:id="@+id/email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="190dp"
-        android:layout_marginLeft="10dp"
-        android:text="Email" />
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
+            android:textColorHint="@color/black2"
+            android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/emailTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:layout_marginTop="200dp"
-        android:layout_marginLeft="10dp"
-        android:width="390dp"
-        android:inputType="textEmailAddress" />
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="NIK"
+                android:id="@+id/etNik"
+                android:inputType="number"
+                android:textColorHint="@color/black2"
+                android:textColor="@color/black2"
+                android:drawableEnd="@drawable/ic_nik"
+                tools:ignore="RtlCompat" />
 
-    <TextView
-        android:id="@+id/psw"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="260dp"
-        android:layout_marginLeft="10dp"
-        android:text="Password" />
+        </android.support.design.widget.TextInputLayout>
 
-    <EditText
-        android:id="@+id/pswTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:layout_marginTop="270dp"
-        android:layout_marginLeft="10dp"
-        android:width="390dp"
-        android:inputType="textPassword" />
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
+            android:textColorHint="@color/black2"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/conf"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="330dp"
-        android:layout_marginLeft="10dp"
-        android:text="Konfirmasi Password" />
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Nama Lengkap"
+                android:id="@+id/etNama"
+                android:inputType="textPersonName"
+                android:textColorHint="@color/black2"
+                android:textColor="@color/black2"
+                android:drawableEnd="@drawable/ic_userku"
+                tools:ignore="RtlCompat" />
 
-    <EditText
-        android:id="@+id/confTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:layout_marginTop="340dp"
-        android:layout_marginLeft="10dp"
-        android:width="390dp"
-        android:inputType="textPassword" />
+        </android.support.design.widget.TextInputLayout>
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="430dp"
-        android:layout_marginLeft="10dp"
-        android:width="390dp"
-        android:background="@color/colorPrimary"
-        android:textColor="#ffff"
-        android:text="Submit" />
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
+            android:textColorHint="@color/black2"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="520dp"
-        android:layout_marginLeft="10dp"
-        android:width="390dp"
-        android:textAlignment="center"
-        android:text="Sudah Punya Akun? Log In Sekarang" />
+            <Spinner
+                android:id="@+id/spKelamin"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#000"
+                android:entries="@array/android_layout_arrays"
+                android:padding="5dp" />
+
+        </android.support.design.widget.TextInputLayout>
+
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
+            android:textColorHint="@color/black2"
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Email"
+                android:id="@+id/etEmail"
+                android:inputType="textEmailAddress"
+                android:textColorHint="@color/black2"
+                android:textColor="@color/black2"
+                android:drawableEnd="@drawable/ic_email_black_24dp"
+                tools:ignore="RtlCompat" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
+            android:textColorHint="@color/black2"
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="No. Handphone"
+                android:id="@+id/etNope"
+                android:inputType="number"
+                android:textColorHint="@color/black2"
+                android:textColor="@color/black2"
+                android:drawableEnd="@drawable/ic_smartphone_black_24dp"
+                tools:ignore="RtlCompat" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:textColorHint="@color/black2"
+            android:layout_marginTop="10dp"
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Password"
+                android:id="@+id/etPassword"
+                android:inputType="textPassword"
+                android:textColorHint="@color/black2"
+                android:textColor="@color/black2"
+                android:drawableEnd="@drawable/ic_pass"
+                tools:ignore="RtlCompat" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:textColorHint="@color/black2"
+            android:layout_marginTop="10dp"
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Re-Enter Password"
+                android:id="@+id/etPassword2"
+                android:inputType="textPassword"
+                android:textColorHint="@color/black2"
+                android:textColor="@color/black2"
+                android:drawableEnd="@drawable/ic_pass"
+                tools:ignore="RtlCompat" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:id="@+id/btnDaftar"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:background="@color/colorPrimary"
+            android:padding="3dp"
+            android:text="Daftar"
+            android:textColor="#EEEEEE"
+            android:textSize="17sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+
 
 </RelativeLayout>
