--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#00867d</color>
     <color name="colorPrimaryDark">#00867d</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#00867d</color>
 
     <color name="Intro1">#c64e77</color>
     <color name="Intro2">#25ed46</color>
