--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:textSize="40sp"
             android:layout_marginTop="-10dp"
-            android:layout_marginLeft="10dp"
+            android:padding="5dp"
             android:textColor="@color/colorPrimary"
             android:text="Register" />
 
