--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,73 +6,100 @@
     android:layout_height="match_parent"
     tools:context=".activity_login">
 
-    <TextView
-        android:id="@+id/login"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="40sp"
+        android:orientation="vertical"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp"
-        android:text="Log In" />
+        android:paddingHorizontal="15dp">
+
+        <TextView
+            android:id="@+id/register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="40sp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"
+            android:textColor="@color/colorPrimary"
+            android:text="Log In" />
+
+        <!--<ImageView
+            android:layout_gravity="center"
+            android:id="@+id/user_profile_photo"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/user_profile_image_background"
+            android:elevation="4dp"
+            android:src="@drawable/m_user"/>-->
 
 
 
-    <TextView
-        android:id="@+id/email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:layout_marginLeft="10dp"
-        android:text="Email" />
 
-    <EditText
-        android:id="@+id/emailTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:layout_marginTop="130dp"
-        android:layout_marginLeft="10dp"
-        android:width="390dp"
-        android:inputType="textEmailAddress" />
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
+            android:textColorHint="@color/black2"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/psw"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="190dp"
-        android:layout_marginLeft="10dp"
-        android:text="Password" />
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Email"
+                android:id="@+id/etEmail"
+                android:inputType="textEmailAddress"
+                android:textColorHint="@color/black2"
+                android:textColor="@color/black2"
+                android:drawableEnd="@drawable/ic_email_black_24dp"
+                tools:ignore="RtlCompat" />
 
-    <EditText
-        android:id="@+id/pswTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:layout_marginTop="200dp"
-        android:layout_marginLeft="10dp"
-        android:width="390dp"
-        android:inputType="textPassword" />
+        </android.support.design.widget.TextInputLayout>
 
 
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="270dp"
-        android:layout_marginLeft="10dp"
-        android:width="390dp"
-        android:background="@color/colorPrimary"
-        android:textColor="#ffff"
-        android:text="Log In" />
 
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="350dp"
-        android:layout_marginLeft="10dp"
-        android:width="390dp"
-        android:textAlignment="center"
-        android:text="Belum Punya Akun? Daftar Sekarang" />
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:textColorHint="@color/black2"
+            android:layout_marginTop="10dp"
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Password"
+                android:id="@+id/etPassword"
+                android:inputType="textPassword"
+                android:textColorHint="@color/black2"
+                android:textColor="@color/black2"
+                android:drawableEnd="@drawable/ic_pass"
+                tools:ignore="RtlCompat" />
+
+        </android.support.design.widget.TextInputLayout>
+
+
+
+        <Button
+            android:id="@+id/btnLogin"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:background="@color/colorPrimary"
+            android:padding="3dp"
+            android:text="Log In"
+            android:textColor="#EEEEEE"
+            android:textSize="17sp"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="10dp"
+            android:width="390dp"
+            android:textAlignment="center"
+            android:text="Belum Punya Akun? Daftar Sekarang" />
+    </LinearLayout>
+
+
 
 </RelativeLayout>
