--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -148,7 +148,7 @@
                         card_view:cardCornerRadius="4dp"
                         card_view:cardElevation="@dimen/cardview_default_elevation">
 
-                        <LinearLayout
+                        <!--<LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal">
@@ -170,7 +170,7 @@
                                 android:textColor="#000"
                                 />
 
-                        </LinearLayout>
+                        </LinearLayout>-->
 
                     </android.support.v7.widget.CardView>
 
