--- a/app/src/main/res/layout/activity_pemesanan.xml
+++ b/app/src/main/res/layout/activity_pemesanan.xml
@@ -154,8 +154,7 @@
                 android:scrollHorizontally="false"
                 android:textColor="@color/black2"
                 android:textColorHint="@color/black2"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textSize="18sp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -185,8 +184,7 @@
                 android:scrollHorizontally="false"
                 android:textColor="@color/black2"
                 android:textColorHint="@color/black2"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textSize="18sp" />
 
         </LinearLayout>
     </ScrollView>
