--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -108,7 +108,7 @@
                 android:inputType="textEmailAddress"
                 android:textColorHint="@color/black2"
                 android:textColor="@color/black2"
-                android:drawableEnd="@drawable/ic_email_black_24dp"
+                android:drawableEnd="@drawable/ic_email"
                 tools:ignore="RtlCompat" />
 
         </android.support.design.widget.TextInputLayout>
@@ -127,7 +127,7 @@
                 android:inputType="number"
                 android:textColorHint="@color/black2"
                 android:textColor="@color/black2"
-                android:drawableEnd="@drawable/ic_smartphone_black_24dp"
+                android:drawableEnd="@drawable/ic_smartphone"
                 tools:ignore="RtlCompat" />
 
         </android.support.design.widget.TextInputLayout>
