--- a/app/src/main/res/layout/activity_edit_profil.xml
+++ b/app/src/main/res/layout/activity_edit_profil.xml
@@ -67,6 +67,7 @@
                 android:layout_height="wrap_content">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/etAlamat"
                     android:layout_width="fill_parent"
                     android:layout_height="69dp"
                     android:layout_marginTop="10dp"
