add ubah password

--- a/app/src/main/res/layout/activity_edit_password.xml
+++ b/app/src/main/res/layout/activity_edit_password.xml
@@ -79,14 +79,14 @@
                     android:id="@+id/etPasswordUlang"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Ketik ulang password lama"
+                    android:hint="Ketik ulang password baru"
                     android:inputType="textPassword"/>
             </android.support.design.widget.TextInputLayout>
 
 
 
             <Button
-                android:id="@+id/btnUbah"
+                android:id="@+id/btnUbahPsw"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
