--- a/app/src/main/res/layout/activity_pemesanan.xml
+++ b/app/src/main/res/layout/activity_pemesanan.xml
@@ -66,25 +66,25 @@
                 android:textColor="@color/black2"/>
 
             <EditText
-                android:id="@+id/etIsiLaporan"
+                android:id="@+id/etDetailLokasi"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="104dp"
                 android:layout_marginTop="10dp"
+                android:background="@drawable/edittext_selector"
                 android:drawablePadding="8dp"
                 android:gravity="top|left"
-                android:overScrollMode="always"
-                android:scrollbarStyle="insideInset"
-                android:scrollbars="vertical"
-                android:lines="6"
-                android:scrollHorizontally="false"
                 android:hint=""
                 android:inputType="textMultiLine"
+                android:lines="6"
+                android:overScrollMode="always"
                 android:padding="10dp"
-                android:background="@drawable/edittext_selector"
-                android:textStyle="bold"
+                android:scrollbarStyle="insideInset"
+                android:scrollbars="vertical"
+                android:scrollHorizontally="false"
                 android:textColor="@color/black2"
                 android:textColorHint="@color/black2"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
