--- a/app/src/main/res/layout/fragment_beranda.xml
+++ b/app/src/main/res/layout/fragment_beranda.xml
@@ -136,9 +136,66 @@
 
             </RelativeLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:padding="5dp"
+                android:background="#eceff1"
+                android:layout_marginTop="220dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="200dp"
+                    android:text="Official Brand"
+
+                    android:textAllCaps="true"
+                    android:textColor="#000"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/txtLihatBrand"
+                    android:layout_width="112dp"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:layout_marginLeft="-25dp"
+                    android:text="Lihat Semua"
+                    android:textAllCaps="false"
+                    android:textColor="#000" />
+
+            </LinearLayout>
+
+
+            <android.support.v7.widget.RecyclerView
+                android:layout_marginTop="250dp"
+                android:padding="5dp"
+                android:layout_marginLeft="14dp"
+                android:id="@+id/recycler_view_brand"
+                android:layout_width="match_parent"
+                android:layout_height="90dp" />
 
             <LinearLayout
-                android:layout_marginTop="220dp"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:padding="5dp"
+                android:background="#eceff1"
+                android:layout_marginTop="340dp">
+
+                <TextView
+                    android:layout_width="411dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="200dp"
+                    android:padding="5dp"
+                    android:text="Mekanikal Elektrikal"
+                    android:textAllCaps="true"
+                    android:textColor="#000"
+                    android:textStyle="bold" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_marginTop="380dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -205,8 +262,29 @@
 
             </LinearLayout>
 
+
             <LinearLayout
-                android:layout_marginTop="300dp"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:padding="5dp"
+                android:background="#eceff1"
+                android:layout_marginTop="540dp">
+
+                <TextView
+                    android:layout_width="411dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="200dp"
+                    android:padding="5dp"
+                    android:text="Bangunan"
+                    android:textAllCaps="true"
+                    android:textColor="#000"
+                    android:textStyle="bold" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_marginTop="450dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -275,7 +353,7 @@
 
 
             <LinearLayout
-                android:layout_marginTop="430dp"
+                android:layout_marginTop="580dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -288,10 +366,12 @@
                     <android.support.v7.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
+
                         <RelativeLayout
                             android:padding="20dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
+
                             <ImageView
                                 android:id="@+id/ico_mn7"
                                 android:background="@drawable/mn_kaca"
@@ -344,7 +424,7 @@
 
 
             <LinearLayout
-                android:layout_marginTop="500dp"
+                android:layout_marginTop="650dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -412,7 +492,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_marginTop="570dp"
+                android:layout_marginTop="730dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
